# house-item

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml
.claude/: settings.json
docs/: 00_개발환경확인.md  01_전체설계.md  02_프로젝트초기화.md  03_PostgreSQL구성.md  04_FastAPI기본구성.md  05_SQLAlchemy_Alembic.md  06_사용자인증.md  07_집과방관리.md  08_수납공간관리.md  (+16 more)
home-items-api/: .dockerignore  Dockerfile  README.md  pyproject.toml
home-items-api/alembic/: env.py
home-items-api/alembic/versions/: 1054e825a2b6_init_baseline.py  10e196676f9f_create_users_table.py  260691954248_create_item_images_table.py  487b280421b6_create_homes_and_rooms_tables.py  716f8bd2cb53_create_storage_locations_table.py  bbb0cb0f38f4_create_items_and_item_tags_tables.py  d234d8cc0e5c_create_categories_and_tags_tables.py
home-items-api/app/: main.py
home-items-api/app/api/: dependencies.py
home-items-api/app/api/v1/: __init__.py  auth_router.py  category_router.py  home_router.py  item_router.py  room_router.py  storage_router.py  tag_router.py  user_router.py
home-items-api/app/core/: config.py  defaults.py  exceptions.py  security.py
home-items-api/app/database/: base.py  session.py
home-items-api/app/models/: __init__.py  category.py  home.py  item.py  item_image.py  room.py  storage_location.py  tag.py  user.py
home-items-api/app/repositories/: category_repository.py  home_repository.py  item_image_repository.py  item_repository.py  room_repository.py  storage_repository.py  tag_repository.py  user_repository.py
home-items-api/app/schemas/: category.py  common.py  home.py  item.py  item_image.py  room.py  storage_location.py  tag.py  user.py
home-items-api/app/services/: auth_service.py  category_service.py  file_storage.py  home_service.py  item_image_service.py  item_service.py  room_service.py  storage_service.py  tag_service.py
home-items-api/tests/: conftest.py  test_auth.py  test_category_tag.py  test_file_storage.py  test_health.py  test_home_room.py  test_item.py  test_item_image.py  test_item_search.py  test_storage_location.py
(+32 files in other folders)
