[project]
name = "home-items-api"
version = "0.1.0"
description = "집안의모든것 백엔드 API (FastAPI)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.12",
    "pillow>=11.0",
    "pillow-heif>=0.18",
    "boto3>=1.43.51",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "httpx>=0.27",
]

# 상위 폴더의 uv 워크스페이스에 편입되지 않도록 자체 워크스페이스 루트로 선언
[tool.uv.workspace]
members = []

[tool.ruff]
line-length = 100
target-version = "py313"
# Alembic 자동 생성 파일(마이그레이션·env)은 린트 대상에서 제외
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
